--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "dist/index.html",
   "scripts": {},
   "devDependencies": {
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "typescript": "^3.7.4"
   }
 }
