--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "cssnano": "^4.1.10",
+    "monaco-editor": "^0.19.3",
     "typescript": "^3.7.4"
   }
 }
