--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "battlejs",
   "version": "0.0.1",
   "main": "dist/index.html",
-  "scripts": {},
+  "scripts": {
+    "build": "parcel build --no-source-maps index.html",
+    "serve": "parcel serve index.html"
+  },
   "devDependencies": {
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
